--- a/static/index.html
+++ b/static/index.html
@@ -40,6 +40,9 @@ function sendJSONXMLHTTPRequest(url, objects, callback) {
                 if (xhr.status==200) {
                     //XXX: parse some JSON from the request!
                     //XXX: Pass the data to the callback!
+		    //alert("yay!");
+		//	callback(data);
+		   
                 }
             } 
             catch(e) {
@@ -50,6 +53,13 @@ function sendJSONXMLHTTPRequest(url, objects, callback) {
     //XXX: POST to a URL
     //XXX: set the mimetype and the accept headers!
     // Remember to use application/json !
+	//var url = host + "entity/" + objects[0];	
+	xhr.open("POST", url, true);
+	console.log(url);
+	console.log(xhr.responseURL);
+	xhr.setRequestHeader("Content-Type", "application/json");
+	xhr.setRequestHeader("Accept", "*");
+	xhr.send(JSON.stringify(objects));
 }
 
 
@@ -138,7 +148,11 @@ function addEntity(entity, data) {
     world[entity] = data;
     drawNextFrame(); // (but should we?)
     //XXX: Send a XHTML Request that updates the entity you just  modified!
-
+	
+	//var url = host + "/entity/"+ entity;
+	var url = "/entity/" + entity;
+	//var newstuff = {entity, data}
+	sendJSONXMLHTTPRequest(url, data, drawFrame);
 }
 
 var counter = 0;
@@ -262,6 +276,22 @@ mouse.mousedraggers.push(function(x,y,clicked,e) {
 
 function update() {
     //XXX: TODO Get the world from the webservice using a XMLHTTPRequest
+    var url = host + "/world";
+    var xhr = new XMLHttpRequest();
+    xhr.open('GET', url);
+    xhr.onreadystatechange = function(){
+	if(xhr.readyState === 4){
+		if(xhr.status === 200){ //success
+			alert(xhr.responseText);			
+	 
+			}
+		else{ //failure
+			alert("ERROR: " + xhr.status);
+			}
+		}
+	}   
+	
+
     drawFrame();
 }
 
